# telemetry

./: .gitignore  CMakeLists.txt
include/: FrameReceiver.h  IPayloadParser.h  Parsers.h  TelemetryProcessor.h  TelemetryStorage.h  crc8.h
src/: Parsers.cpp  TelemetryProcessor.cpp  TelemetryStorage.cpp  crc8.cpp
tests/: test_crc8.cpp
